# EE581

./: README.md  pyproject.toml
data/: README.md  Stats_classical_methods.txt
src/: README.md  f1_score_calculation.m
src/classical_methods/: More_Stats_classical_methods.txt  Stats.txt  Stats_classical_methods.txt  Stats_prev.txt  end_time.mat  end_time_gq_no_closing.mat  end_time_hsv_5_close.mat  end_time_hsv_7_closing.mat  end_time_hsv_no_close.mat  end_time_sp_no_closing.mat  grayscale_histogram.m  hsv_gq_sp_for_mask.mlx  hsv_gq_sp_for_masks_no_morph.mlx  methods_for_mask.mlx  mm_for_methods_for_mask.mlx  prev_stats.txt  start_time.mat  stas_backup.txt
src/data_expansion/: main.py  pyproject.toml
src/fetch_scripts/: download.py
src/histograms/: histograms.py
src/image_viewer/: view.py
src/init_model/: Plots.ipynb  landslide4sense.ipynb  landslide4sense10Chan.ipynb  landslide4senseAllTraining.ipynb  landslide4senseKFold_Final.ipynb  landslide4senseXChan.ipynb  landslide4sensealltraining.py  landslide4sensekfold.py  pred.npz  second_landslide4sense.ipynb  unpack.py
src/post_processing/: binary_morphology.m
src/pre_processing/: GLCM.mlx  GLCM_SVM.mlx  HSV_Analysis.mlx  HSV_AnalysisV2.mlx  HSV_AnalysisV3.mlx  IsolateRed.mlx  Proc_imgs_for_dl.mlx  colour_histogram_classification.m  grayscale_histogram.m  grayscale_histogram_score_calculation.m  green_quant_mask.mlx  h5_hsv_slope_no_go.mlx  hsv_both_analysis.mlx  median_filtering.m  methods_for_mask.mlx  pixel_colour_classification.m  rgb_morphology.m  superpixels_proc.mlx
(+175 files in other folders)
